--- a/backend/src/main/webapp/app/views/register/add.html
+++ b/backend/src/main/webapp/app/views/register/add.html
@@ -23,12 +23,16 @@
 					<input tabindex="3" name="lastname" class="form-control" ng-model="data.lastname" required>
 				</div>
 				
-				<div class="form-group col-lg-4" ng-class="{'has-error':persistForm.citizenId.$invalid}">
+				<div class="form-group col-lg-6" ng-class="{'has-error':persistForm.citizenId.$invalid}">
 					<label class="control-label">เลขบัตรประจำตัวประชาชน *</label>
 					<input tabindex="6" name="citizenId" class="form-control" ng-model="data.citizenId" required>
 				</div>				
+				<div class="form-group col-lg-6" ng-class="{'has-error':persistForm.fingerId.$invalid}">
+					<label class="control-label">รหัสจากเครื่อง Finger Scan *</label>
+					<input tabindex="7" name="fingerId" class="form-control" ng-model="data.fingerId" required>
+				</div>
 				
-				<div class="col-lg-4 form-group">
+				<div class="col-lg-6 form-group">
 					<label class="control-label">วันเดือนปีเกิด</label>
 					<div class="input-group">
 						<input tabindex="4" name="birthday" type="text" readonly="readonly" class="form-control" datepicker-popup="{{format}}"
@@ -43,18 +47,15 @@
 						</span>
 					</div>
 				</div>
-				<div class="form-group col-lg-4" ng-class="{'has-error':persistForm.image.$invalid}">
+				<div class="form-group col-lg-6" ng-class="{'has-error':persistForm.image.$invalid}">
 					<label class="control-label">ภาพถ่ายหน้าตรง *</label>
 					<input tabindex="5" class="form-control" id="image" name="image" type="file" onchange="angular.element(this).scope().preview(this)" 
 					       ng-model='imgUpload' base-sixty-four-input accept=".png,.jpg,.gif" />
 				</div>
-				<div class="form-group col-lg-4" ng-class="{'has-error':persistForm.fingerId.$invalid}">
-					<label class="control-label">รหัสจากเครื่อง Finger Scan *</label>
-					<input tabindex="7" name="fingerId" class="form-control" ng-model="data.fingerId" required>
-				</div>
+				
 			</div>
 			
-			<div class="row panel panel-red" style="padding-top: 10px;">
+			<div class="row panel panel-primary" style="padding-top: 10px;">
 				<div style="position: absolute; left: 50%;">
 					<div style="position: relative; left: -50%; top: -23px;">
 			            <i class="fa fa-lock fa-2x" style="color: #337AB7;"></i>
@@ -112,10 +113,10 @@
 	            <div class="form-group col-lg-4">
                       <label class="control-label">สถานะ &nbsp;&nbsp;</label>
                       <label class="radio-inline">
-                          <input tabindex="19" type="radio" name="status" value="0" ng-checked="data.authen.status == 0" ng-model="data.authen.status">เปิด
+                          <input tabindex="19" type="radio" name="status" value="1" ng-checked="data.authen.status == 0" ng-model="data.authen.status">เปิด
                       </label>
                       <label class="radio-inline">
-                          <input type="radio" name="status" value="1" ng-checked="data.authen.status == 1" ng-model="data.authen.status">ปิด
+                          <input type="radio" name="status" value="0" ng-checked="data.authen.status == 1" ng-model="data.authen.status">ปิด
                       </label>
                 </div>
 	             
@@ -168,7 +169,7 @@
 		
 		
 		
-		<div class="col-lg-10" style="text-align: center;">
+		<div class="col-lg-12" style="text-align: center;">
 			<button type="button" class="btn btn-outline btn-primary btn-lg" ng-click="clear()">ล้าง</button>
 			<button type="submit" class="btn btn-outline btn-primary btn-lg" ng-disabled="persistForm.$invalid">{{ persisBtn }}</button>
 		</div>
