--- a/backend/src/main/webapp/app/views/register/add.html
+++ b/backend/src/main/webapp/app/views/register/add.html
@@ -62,9 +62,12 @@
 			        </div>
 				</div>
 			
-				<div class="form-group col-lg-4" ng-class="{'has-error':persistForm.userName.$invalid}">
+				<div class="form-group col-lg-4" ng-class="{'has-error':persistForm.userName.$invalid  || existingUserErrMsg}">
 					<label class="control-label">Username *</label>
-					<input tabindex="15" name="userName" class="form-control" ng-model="data.authen.userName" required>
+					<span class="text-danger" ng-show="existingUserErrMsg" style="position: absolute; right: 0px;">
+						<i class='fa fa-warning fa-fw'></i><em>{{ existingUserErrMsg }}</em>
+					</span>
+					<input tabindex="15" name="userName" class="form-control" ng-model="data.authen.userName" ng-change="existingUserErrMsg = null" required>
 				</div>
 				<div class="form-group col-lg-4" ng-class="{'has-error':persistForm.password.$invalid}">
 					<label class="control-label">Password *</label>
