--- a/backend/src/main/webapp/app/views/member_type/add.html
+++ b/backend/src/main/webapp/app/views/member_type/add.html
@@ -34,10 +34,10 @@
 			<div class="form-group">
                  <label>สถานะ &nbsp;&nbsp;</label>
                  <label class="radio-inline">
-                     <input type="radio" name="status" value="0" ng-checked="data.status == 0" ng-model="data.status">เปิด
+                     <input type="radio" name="isActive" value="1" ng-checked="data.isActive == 1" ng-model="data.isActive">เปิด
                  </label>
                  <label class="radio-inline">
-                     <input type="radio" name="status" value="1" ng-checked="data.status == 1" ng-model="data.status">ปิด
+                     <input type="radio" name="isActive" value="0" ng-checked="data.isActive == 0" ng-model="data.isActive">ปิด
                  </label>
              </div>
 			<div style="text-align: center;">
