--- a/backend/src/main/webapp/app/views/master_naming/main.html
+++ b/backend/src/main/webapp/app/views/master_naming/main.html
@@ -1,7 +1,7 @@
 <div>
 	<div class="row">
 		<div class="col-lg-12">
-			<h1 class="page-header">ตำแหน่งงาน</h1>
+			<h1 class="page-header">{{ headerLabel }}</h1>
 		</div>
 	</div>
 	
@@ -9,7 +9,7 @@
         <div class="col-lg-12">
             <div class="panel panel-primary">
                 <div class="panel-heading">
-                    <i class="fa fa-list-alt  fa-fw"></i> แสดงตำแหน่งงาน
+                    <i class="fa fa-list-alt  fa-fw"></i> {{ panelLabel }}
                 </div>
                 <div class="panel-body">
 
