--- a/backend/src/main/webapp/app/views/register/add.html
+++ b/backend/src/main/webapp/app/views/register/add.html
@@ -1,14 +1,12 @@
 <div>
 	<form name="persistForm" ng-submit="isEdit ? update() : save()" novalidate>
 		
-		<div class="col-lg-7 panel panel-default" style="padding-left: 10px; padding-right: 10px; padding-top: 5px;">
-			
+		<div class="col-lg-6 panel panel-default" style="padding-left: 10px; padding-right: 10px; padding-top: 5px;">
 			<div style="position: absolute; left: 50%;">
 				<div style="position: relative; left: -50%; top: -23px;">
 		            <i class="fa fa-child fa-2x" style="color: #337AB7;"></i>
 		        </div>
 			</div>
-			
 			<div class="row">
 				<div class="form-group col-lg-4" ng-class="{'has-error':persistForm.prefixName.$invalid}">
 					<label class="control-label">คำนำหน้าชื่อ</label>
@@ -57,123 +55,110 @@
 				</div>
 				
 			</div>
-			
-			<div class="row panel panel-primary" style="padding-top: 10px;">
+		</div>
+		<div class="col-lg-6">
+			<div class="panel panel-default" style="padding-left: 10px; padding-right: 10px; padding-top: 5px;">
 				<div style="position: absolute; left: 50%;">
-					<div style="position: relative; left: -50%; top: -12px;">
+					<div style="position: relative; left: -50%; top: -22px;">
 			            <i class="fa fa-lock fa-2x" style="color: #337AB7;"></i>
 			        </div>
 				</div>
-			
-				<div class="form-group col-lg-4" ng-class="{'has-error':persistForm.userName.$invalid || existingUserErrMsg}">
-					<label class="control-label">Username</label>
-					<span class="text-danger" ng-show="existingUserErrMsg" style="position: absolute; right: 0px;">
-						<i class='fa fa-warning fa-fw'></i><em>{{ existingUserErrMsg }}</em>
-					</span>
-					<input tabindex="15" name="userName" class="form-control" ng-model="data.authen.userName" ng-change="existingUserErrMsg = null" required>
-				</div>
-				<div class="form-group col-lg-4" ng-class="{'has-error':persistForm.password.$invalid}">
-					<label class="control-label">Password</label>
-					<input tabindex="16" name="password" type="password" class="form-control" ng-model="data.authen.password" required>
-				</div>
-				<div class="form-group col-lg-4" ng-class="{'has-error':persistForm.rePassword.$invalid}">
-					<label class="control-label">Re-Password</label>
-					<input tabindex="17" name="rePassword" type="password" class="form-control" ng-model="rePassword" required>
-				</div>
-				
-				<div class="form-group col-lg-4" ng-class="{'has-error':persistForm.memberTypeId.$invalid}">
-					<label class="control-label">ประเภทสมาชิก</label>
-					<select tabindex="18" name="memberTypeId" class="form-control" ng-model="data.memberTypeId" required>
-						<option value="">--- เลือกประเภทสมาชิก ---</option>
-				      	<option ng-selected="{{ data.memberTypeId == option.memberTypeId }}" 
-				      			ng-repeat="option in memberTypes" value="{{ option.memberTypeId }}">{{ option.memberTypeName }}</option>
-				    </select>
-				</div>
-				
-				
-				<div class="form-group col-lg-4" ng-class="{'has-error':persistForm.roles.$invalid}">
-					<label class="control-label">สิทธิ</label>
-					<select tabindex="18" name="roles" class="form-control" ng-model="data.authen.authority" required>
-						<option value="">{{'user.addpage.dropdown_role_msg' | translate}}</option>
-				      	<option ng-selected="{{ user.roles[0].authority == option.authority }}" 
-				      			ng-repeat="option in rolesConstant" value="{{ option.authority }}">{{ option.name }}</option>
-				    </select>
-	             </div>
-				
-				<div class="form-group col-lg-4">
-					<label class="control-label">วันหมดอายุ</label>
-					<div class="input-group">
-						<input tabindex="19" name="expireDate" type="text" readonly="readonly" class="form-control" datepicker-popup="{{format}}"
-							current-text="{{'datepicker.today' | translate}}"
-							clear-text="{{'datepicker.clear' | translate}}"
-							close-text="{{'datepicker.close' | translate}}"
-							ng-model="data.expireDate" is-open="expireDatePicker" /> 
-							<span class="input-group-btn">
-							<button type="button" class="btn btn-default" ng-click="openExpireDate($event)">
-								<i class="glyphicon glyphicon-calendar"></i>
-							</button>
+				<div class="row">
+					<div class="form-group col-lg-4" ng-class="{'has-error':persistForm.userName.$invalid || existingUserErrMsg}">
+						<label class="control-label">Username</label>
+						<span class="text-danger" ng-show="existingUserErrMsg" style="position: absolute; right: 0px;">
+							<i class='fa fa-warning fa-fw'></i><em>{{ existingUserErrMsg }}</em>
 						</span>
+						<input tabindex="15" name="userName" class="form-control" ng-model="data.authen.userName" ng-change="existingUserErrMsg = null" required>
 					</div>
-				</div>
-					             
-	            <div class="form-group col-lg-4">
-                      <label class="control-label">สถานะ &nbsp;&nbsp;</label>
-                      <label class="radio-inline">
-                          <input tabindex="19" type="radio" name="status" value="1" ng-checked="data.authen.status == 1" ng-model="data.authen.status">เปิด
-                      </label>
-                      <label class="radio-inline">
-                          <input type="radio" name="status" value="0" ng-checked="data.authen.status == 0" ng-model="data.authen.status">ปิด
-                      </label>
+					<div class="form-group col-lg-4" ng-class="{'has-error':persistForm.password.$invalid}">
+						<label class="control-label">Password</label>
+						<input tabindex="16" name="password" type="password" class="form-control" ng-model="data.authen.password" required>
+					</div>
+					<div class="form-group col-lg-4" ng-class="{'has-error':persistForm.rePassword.$invalid}">
+						<label class="control-label">Re-Password</label>
+						<input tabindex="17" name="rePassword" type="password" class="form-control" ng-model="rePassword" required>
+					</div>
+					<div class="form-group col-lg-6" ng-class="{'has-error':persistForm.memberTypeId.$invalid}">
+						<label class="control-label">ประเภทสมาชิก</label>
+						<select tabindex="18" name="memberTypeId" class="form-control" ng-model="data.memberTypeId" required>
+							<option value="">--- เลือกประเภทสมาชิก ---</option>
+					      	<option ng-selected="{{ data.memberTypeId == option.memberTypeId }}" 
+					      			ng-repeat="option in memberTypes" value="{{ option.memberTypeId }}">{{ option.memberTypeName }}</option>
+					    </select>
+					</div>
+					<div class="form-group col-lg-6" ng-class="{'has-error':persistForm.roles.$invalid}">
+						<label class="control-label">สิทธิ</label>
+						<select tabindex="18" name="roles" class="form-control" ng-model="data.authen.authority" required>
+							<option value="">{{'user.addpage.dropdown_role_msg' | translate}}</option>
+					      	<option ng-selected="{{ user.roles[0].authority == option.authority }}" 
+					      			ng-repeat="option in rolesConstant" value="{{ option.authority }}">{{ option.name }}</option>
+					    </select>
+		            </div>
+					<div class="form-group col-lg-6">
+						<label class="control-label">วันหมดอายุ</label>
+						<div class="input-group">
+							<input tabindex="19" name="expireDate" type="text" readonly="readonly" class="form-control" datepicker-popup="{{format}}"
+								current-text="{{'datepicker.today' | translate}}"
+								clear-text="{{'datepicker.clear' | translate}}"
+								close-text="{{'datepicker.close' | translate}}"
+								ng-model="data.expireDate" is-open="expireDatePicker" /> 
+								<span class="input-group-btn">
+								<button type="button" class="btn btn-default" ng-click="openExpireDate($event)">
+									<i class="glyphicon glyphicon-calendar"></i>
+								</button>
+							</span>
+						</div>
+					</div>
+					<div class="form-group col-lg-6">
+		                 <label class="control-label">สถานะ &nbsp;&nbsp;</label>
+		                 <!-- <label class="control-label">&nbsp;</label> -->
+		                 <div class="radio">
+		                 	<!-- <label style="font-weight: bold;">สถานะ &nbsp;&nbsp;</label> -->
+			                 <label class="radio-inline">
+			                     <input tabindex="19" type="radio" name="status" value="1" ng-checked="data.authen.status == 1" ng-model="data.authen.status">เปิด
+			                 </label>
+			                 <label class="radio-inline">
+			                     <input type="radio" name="status" value="0" ng-checked="data.authen.status == 0" ng-model="data.authen.status">ปิด
+			                 </label>
+		                 </div>
+		             </div>	                
                 </div>
-	             
-			</div>
+			</div>         
 		</div>
-	
-	
-	
-		<div class="col-lg-5">
-			
-			<div class="panel panel-default" style="padding-left: 10px; padding-right: 10px; padding-top: 5px;">
+		<div class="col-lg-12">
+			<div class="panel panel-default row" style="padding-top: 5px;">
 				<div style="position: absolute; left: 50%;">
 					<div style="position: relative; left: -50%; top: -23px;">
 			            <i class="fa fa-home fa-2x" style="color: #337AB7;"></i>
 			        </div>
 				</div>
-				
-		        <div class="row">
-					<div class="form-group col-lg-6">
-						<label class="control-label">เบอร์โทร *</label>
-						<input tabindex="9" name="conTelNo" class="form-control" ng-model="data.conTelNo">
-					</div>
-					<div class="form-group col-lg-6">
-						<label class="control-label">Line ID *</label>
-						<input tabindex="13" name="conLineId" class="form-control" ng-model="data.conLineId">
-					</div>
-					<div class="form-group col-lg-6">
-						<label class="control-label">มือถือ *</label>
-						<input tabindex="10" name="conMobileNo" class="form-control" ng-model="data.conMobileNo">
-					</div>
-					<div class="form-group col-lg-6">
-						<label class="control-label">Facebook *</label>
-						<input tabindex="14" name="conFacebook" class="form-control" ng-model="data.conFacebook">
-					</div>
-					<div class="form-group col-lg-6">
-						<label class="control-label">ที่อยู่อีเมล์ *</label>
-						<input tabindex="11" name="conEmail" class="form-control" ng-model="data.conEmail">
-					</div>
-					<div class="form-group col-lg-12">
-						<label class="control-label">ที่อยู่ *</label>
-						<textarea tabindex="12" name="conAddress" class="form-control" rows="3" ng-model="data.conAddress"></textarea>
-					</div>
+				<div class="form-group col-lg-2">
+					<label class="control-label">เบอร์โทร</label>
+					<input tabindex="9" name="conTelNo" class="form-control" ng-model="data.conTelNo">
+				</div>
+				<div class="form-group col-lg-2">
+					<label class="control-label">Line ID</label>
+					<input tabindex="13" name="conLineId" class="form-control" ng-model="data.conLineId">
+				</div>
+				<div class="form-group col-lg-2">
+					<label class="control-label">มือถือ</label>
+					<input tabindex="10" name="conMobileNo" class="form-control" ng-model="data.conMobileNo">
+				</div>
+				<div class="form-group col-lg-2">
+					<label class="control-label">Facebook</label>
+					<input tabindex="14" name="conFacebook" class="form-control" ng-model="data.conFacebook">
+				</div>
+				<div class="form-group col-lg-2">
+					<label class="control-label">ที่อยู่อีเมล์</label>
+					<input tabindex="11" name="conEmail" class="form-control" ng-model="data.conEmail">
+				</div>
+				<div class="form-group col-lg-6">
+					<label class="control-label">ที่อยู่</label>
+					<textarea tabindex="12" name="conAddress" class="form-control" rows="3" ng-model="data.conAddress"></textarea>
 				</div>
 			</div>
 		</div>
-		
-		
-		
-		
-		
-		
 		
 		<div class="col-lg-12" style="text-align: center;">
 			<button type="button" class="btn btn-outline btn-primary btn-lg" ng-click="clear()">ล้าง</button>
